# simple-hs

./: CMakeLists.txt  README.md
src/: main.cpp
